# GenAI_Sem6

./: assignment2.ipynb  pyproject.toml
Assignment 1/: Assignment_01.docx  assignment1.ipynb
Assignment 10/: Assignment_10.docx  assignment10.ipynb
Assignment 2/: Assignment_02.docx
Assignment 3/: Assignment_03.docx
Assignment 4/: Assignment_04.docx
Assignment 5/: Assignment_05.docx
Assignment 6/: Assignment_06.docx
Assignment 7/: Assignment_07.docx
Assignment 8/: Assignment_08.docx
Assignment 9/: Assignment_09.docx
