[project]
name = "genai-lab-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "diffusers>=0.37.0",
    "ftfy>=6.3.1",
    "google-genai>=1.67.0",
    "gtts>=2.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.28.0",
    "pillow>=12.1.1",
    "regex>=2026.2.28",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
